# pixelsquibougent

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
shaders/: base_vertex.glsl  template_fragment.glsl
src/: main.cpp
src/core/: AudioEngine.cpp  AudioEngine.hpp  DeckLoader.cpp  DeckLoader.hpp  EngineOrchestrator.cpp  EngineOrchestrator.hpp  RenderEngine.cpp  RenderEngine.hpp  VJState.hpp  VideoExport.cpp  VideoExport.hpp
src/gui/: Interface.cpp  Interface.hpp
src/network/: WebServer.cpp  WebServer.hpp
web_client/: index.html
